<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/blue_weather"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SpashThree">


    <TextView
        android:id="@+id/text_splash_1"
        android:text="@string/enjoy"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/colorTexts"
        android:gravity="center"
        android:layout_marginBottom="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_below="@id/text_splash_1"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/previous"
            android:text="@string/PREVIOUS"
            android:textColor="@color/colorTexts"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/next"
            android:text="@string/NEXT"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorTexts"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>